# agentforge

./: .env  .gitignore  README.md  debug_tools.py  main.py  pyproject.toml  requirements.txt
basic-chatbot/: basicChatbot.ipynb
experiments/basic-chatbot/: basicChatbot.ipynb  humanFeedback.ipynb
mcp-server/: README.md  client.py  mathserver.py  pyproject.toml  weatherserver.py
services/: README.md
services/mcp/math/: server.py
services/mcp/tavily/: server.py
services/mcp/weather/: server.py
src/apps/chatbot/: app.py
src/apps/chatbot/api/: api.py
src/apps/chatbot/ui/: streamlit_app.py
src/core/mcp/: planner.py  registry.py  runtime.py  schemas.py  telemetry.py
src/core/memory/: context.py  conversation.py
