[project]
name = "agentforge"
version = "0.1.0"
description = "MCP-based agent framework with tool runtime and planner system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "python-dotenv>=1.1.1",
    "langchain-mcp-adapters>=0.1.7",
    "mcp>=1.9.4",
    "streamlit>=1.36.0",
    "langchain-core>=0.3.68",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentforge*"]
